Adds smart_common submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "smart/client"]
 	path = smart/client
 	url = ../smart_client_python
+[submodule "smart/common"]
+	path = smart/common
+	url = git@github.com:chb/smart_common.git
