Update the submodule download URLs

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/chb/oauth_py.git
 [submodule "smart/client"]
 	path = smart/client
-	url = ../smart_client_python
+	url = https://github.com/chb/smart_client_python.git
 [submodule "smart/common"]
 	path = smart/common
-	url = git@github.com:chb/smart_common.git
+	url = https://github.com/chb/smart_common.git
