--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/chb/oauth_py.git
 [submodule "smart/common"]
 	path = smart/common
-	url = https://github.com/chb/smart_common.git
+	url = https://github.com/smart-platforms/smart_common.git
