--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "oauth"]
 	path = oauth
-	url = https://github.com/chb/oauth_py.git
+	url = https://github.com/smart-platforms/oauth_py.git
 [submodule "smart/common"]
 	path = smart/common
 	url = https://github.com/smart-platforms/smart_common.git
